--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <!--<p>{{ site.description | default: site.github.project_tagline }}</p>-->
+        <!--<p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
@@ -29,6 +29,7 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+      -->
       </header>
       <section>
 
@@ -43,6 +44,7 @@
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    <!--
     {% if site.google_analytics %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -53,5 +55,6 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+    -->
   </body>
 </html>
