--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -3,10 +3,12 @@
 
 body {
   background-color: #fff;
-  padding:50px;
-  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#727272;
+  //padding:50px;
+  font: 14px "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  //color:#727272;
+  color: #585858;
   font-weight:400;
+  margin: 0px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -20,6 +22,7 @@ p, ul, ol, table, pre, dl {
 
 h1, h2, h3 {
   line-height:1.1;
+  font-weight: normal;
 }
 
 h1 {
@@ -41,7 +44,8 @@ a {
 
 a:hover, a:focus {
   color:#069;
-  font-weight: bold;
+  //font-weight: bold;
+  text-decoration: underline;
 }
 
 a small {
@@ -58,6 +62,7 @@ a:hover small {
 .wrapper {
   width:860px;
   margin:0 auto;
+  height:100%
 }
 
 blockquote {
@@ -108,8 +113,9 @@ img {
 header {
   width:300px;
   float:left;
-  position:fixed;
+  //position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
+  margin-top: 70px;
 }
 
 .myname:hover {
@@ -119,6 +125,7 @@ header {
 
 .myname {
   color: #222222;
+  margin-left: 3%;
 }
 ul.downloads {
   list-style:none;
@@ -184,7 +191,7 @@ section {
   width:550px;
   float:right;
   padding-bottom:50px;
-  margin-top: 50px;
+  margin-top: 70px;
 }
 
 small {
@@ -279,4 +286,27 @@ footer {
     font-size:12pt;
     color:#444;
   }
+}
+
+.menu {
+  width: 100%;
+  height: 70px;
+  position: fixed;
+  background-color: white;
+}
+
+.child1 {
+  float: left;
+  width: 300px;
+  margin-left: 15px;
+}
+
+.child2 {
+  float: right;
+  width: 130px;
+}
+
+.child3 {
+  float: right;
+  width: 100px;
 }
