--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         </div>
         <!--
         <div class="child2">
-          <h3><a href="./exposition.html">Exposition</a></h2>
+          <h3><a href="./knots_bin/index.html">Exposition</a></h2>
         </div>
         -->
       </div>
