--- a/assets/files/bsl/css/app.css
+++ b/assets/files/bsl/css/app.css
@@ -38,10 +38,11 @@ body {
   width: min-content;
 }
 
-#question {
+#question-alphabet-page, #question-greetings-page {
   margin-left:auto;
   margin-right: auto;
-  width: 450px;
+  width: fit-content;
+  height: 305px;
 }
 
 .myform {
@@ -49,13 +50,18 @@ body {
   margin:auto !important;
 }
 
-#visibleanswer {
+#visibleanswer-alphabet-page, #visibleanswer-greetings-page  {
   margin: auto;
   width: fit-content;
 }
 
+img{
+  height:100%;
+  max-height:300px;
+}
+
 @media only screen and (max-width: 500px) {
- #question {
+ #question-alphabet-page, #question-greetings-page {
    width: 100%;
  }
 
