--- a/assets/files/bsl/css/app.css
+++ b/assets/files/bsl/css/app.css
@@ -58,14 +58,20 @@ body {
 img{
   height:100%;
   max-height:300px;
+  max-width: 100%;
 }
 
 @media only screen and (max-width: 500px) {
  #question-alphabet-page, #question-greetings-page {
    width: 100%;
+   height: fit-content;
  }
 
  .myform {
-   width: 100%;
+   width: 95% !important;
+ }
+
+ img {
+   height:auto;
  }
 }
